.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:45:07 **** Clean-only build of configuration Release for project Assignment4 ****
make clean 
rm -rf  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o  ./src/assign4.d ./src/linkedlist.d ./src/stack.d ./src/tree.d  A4
 
01:24:51 **** Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
../src/assign4.cpp: In function ‘int main()’:
../src/assign4.cpp:22:4: error: expected ‘:’ before ‘b’
    b.postfix();
    ^
src/subdir.mk:27: recipe for target 'src/assign4.o' failed
make: *** [src/assign4.o] Error 1
01:25:03 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building file: ../src/linkedlist.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/linkedlist.d" -MT"src/linkedlist.o" -o "src/linkedlist.o" "../src/linkedlist.cpp"
Finished building: ../src/linkedlist.cpp
 
Building file: ../src/stack.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/stack.d" -MT"src/stack.o" -o "src/stack.o" "../src/stack.cpp"
Finished building: ../src/stack.cpp
 
Building file: ../src/tree.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/tree.d" -MT"src/tree.o" -o "src/tree.o" "../src/tree.cpp"
Finished building: ../src/tree.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:25:43 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:26:54 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:27:28 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:27:47 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:27:52 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:28:53 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:30:53 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:32:04 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:32:07 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:39:37 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building file: ../src/linkedlist.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/linkedlist.d" -MT"src/linkedlist.o" -o "src/linkedlist.o" "../src/linkedlist.cpp"
Finished building: ../src/linkedlist.cpp
 
Building file: ../src/stack.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/stack.d" -MT"src/stack.o" -o "src/stack.o" "../src/stack.cpp"
Finished building: ../src/stack.cpp
 
Building file: ../src/tree.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/tree.d" -MT"src/tree.o" -o "src/tree.o" "../src/tree.cpp"
Finished building: ../src/tree.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:45:13 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:45:20 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:45:31 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
01:46:18 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
Building file: ../src/assign4.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/assign4.d" -MT"src/assign4.o" -o "src/assign4.o" "../src/assign4.cpp"
Finished building: ../src/assign4.cpp
 
Building file: ../src/tree.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/tree.d" -MT"src/tree.o" -o "src/tree.o" "../src/tree.cpp"
Finished building: ../src/tree.cpp
 
Building target: Assignment4
Invoking: GCC C++ Linker
g++  -o "Assignment4"  ./src/assign4.o ./src/linkedlist.o ./src/stack.o ./src/tree.o   
Finished building target: Assignment4
 
01:50:48 **** Incremental Build of configuration Release for project Assignment4 ****
make all 
make: Nothing to be done for 'all'.
